Add chat app, edit contact

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         Development program through Career Foundry.
         <br />
         <br />
-        Some of my hobbies include travelling, working out, hot yoga, playing
+        When I'm not coding I enjoy travelling, working out, hot yoga, playing
         guitar, going to concerts, and binge watching TV series.
       </p>
       <a href="files/Resume_Michael Fragiskatos.pdf" class="button" download
@@ -100,6 +100,16 @@
           </tr>
           <tr>
             <td>Node.js</td>
+            <td>1</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>mongoDB</td>
+            <td>1</td>
+            <td>Beginner</td>
+          </tr>
+          <tr>
+            <td>PostgreSQL</td>
             <td>1</td>
             <td>Beginner</td>
           </tr>
