--- a/contact.html
+++ b/contact.html
@@ -42,15 +42,15 @@
 
     <section class="contact">
       <h1>Contact Information</h1>
-      Telephone:<a href= tel:12269293570>1-226-929-3570</a> <br>
+      Telephone:<a href= tel:12269293570> 1-226-929-3570</a> <br>
       Skype:<a href="skype:mfragiskatos"> mfragiskatos</a> <br>
-      Email:<a href="mailto:michael.fragiskatos@gmail.com">michael.fragiskatos@gmail.com</a><br>
+      Email:<a href="mailto:michael.fragiskatos@gmail.com"> michael.fragiskatos@gmail.com</a><br>
       <br>
-      <a href="mailto:michael.fragiskatos@gmail.com">Contact Me!</a>
+      <!-- <a href="mailto:michael.fragiskatos@gmail.com">Contact Me!</a> -->
     </section>
     <br>
     <div class="contact-container">
-      <form method="post" class="contact-form">
+      <!-- <form method="post" class="contact-form">
         <label class="standard-label" for="contact-email">Email: </label>
         <input type="email" id="contact-email" required>
         <label class="standard-label" for="contact-tel">Telephone: </label>
@@ -61,19 +61,23 @@
         <input type="submit" form action="mailto:michael.fragiskatos@gmail.com
           value="Send message">
       </form>
-    </div>
+    </div> -->
 
     <footer class="page-footer">
-      <h2>Find me on:</h2>
+      <h2>You can also find me on:</h2>
       <div class="social-media">
-        <a href="https://github.com/mfraggy25">
+        <a href="https://github.com/mfraggy25" target="_blank">
           <img src="img/iconfinder_github_circle_black_107161.svg" alt="Github"
             class="social__logo">
         </a>
-        <a href="https://www.linkedin.com/in/michaelfragiskatos/">
+        <a href="https://www.linkedin.com/in/michaelfragiskatos/" target="_blank">
           <img src="img/iconfinder_linkedin_circle_color_107178.svg"
             alt="LinkedIn" class="social__logo">
         </a>
+        <!-- <a href="https://www.twitter.com/petani4life/" target="_blank">
+          <img src="img/iconfinder_twitter_circle_color_107170.svg"
+            alt="Twitter" class="social__logo">
+        </a> -->
       </div>
     </footer>
 
