--- a/work.html
+++ b/work.html
@@ -124,13 +124,14 @@
           <a href="https://mfraggy25.github.io/MeetNGreet">Hosted Site</a>
         </div>
         <div class="grid__item">
-          <h2>Mobile web app</h2>
+          <h2>Mad Chatter</h2>
+          <img src="img/Chat.png" width="340" height="300" />
           <p>
-            Within this project, I was responsible for the frontend. It’s
-            written in React.js. Additionally, I've created the HTML and CSS
-            templates.
+            Using React Native, this chat application allows users to send and
+            receive messages and gives them the ability to share images and
+            their location.
           </p>
-          <a href="#">See project on GitHub</a>
+          <a href="https://github.com/mfraggy25/mad-chatter">GitHub Project</a>
         </div>
       </div>
     </section>
@@ -138,14 +139,17 @@
     <footer class="page-footer">
       <h2>Find me on:</h2>
       <div class="social-media">
-        <a href="https://github.com/mfraggy25">
+        <a href="https://github.com/mfraggy25" target="_blank">
           <img
             src="img/iconfinder_github_circle_black_107161.svg"
             alt="Github"
             class="social__logo"
           />
         </a>
-        <a href="https://www.linkedin.com/in/michaelfragiskatos/">
+        <a
+          href="https://www.linkedin.com/in/michaelfragiskatos/"
+          target="_blank"
+        >
           <img
             src="img/iconfinder_linkedin_circle_color_107178.svg"
             alt="LinkedIn"
