--- a/casestudy.html
+++ b/casestudy.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Case Study</title>
+        <title style="text-align:center">Case Study</title>
         <link rel="stylesheet" type="text/css"
             href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link
@@ -151,5 +151,24 @@
                 </ul>
             </p>
         </section>
+        <footer class="page-footer">
+            <h2>Find me on:</h2>
+            <div class="social-media">
+              <a href="https://github.com/mfraggy25" target="_blank">
+                <img src="img/iconfinder_github_circle_black_107161.svg" alt="Github"
+                  class="social__logo">
+              </a>
+              <a href="https://www.linkedin.com/in/michaelfragiskatos/" target="_blank">
+                <img src="img/iconfinder_linkedin_circle_color_107178.svg"
+                  alt="LinkedIn" class="social__logo">
+              </a>
+              <!-- <a href="https://www.twitter.com/petani4life/" target="_blank">
+                <img src="img/iconfinder_twitter_circle_color_107170.svg"
+                  alt="Twitter" class="social__logo">
+              </a> -->
+            </div>
+          </footer>
+      
+          <script src="js/tota11y.min.js"></script>
         </body>
         </html>
