--- a/index.html
+++ b/index.html
@@ -76,14 +76,17 @@
     <footer class="page-footer">
       <h2>Find me on:</h2>
       <div class="social-media">
-        <a href="https://github.com/mfraggy25">
+        <a href="https://github.com/mfraggy25" target="_blank">
           <img
             src="img/iconfinder_github_circle_black_107161.svg"
             alt="Github"
             class="social__logo"
           />
         </a>
-        <a href="https://www.linkedin.com/in/michaelfragiskatos/">
+        <a
+          href="https://www.linkedin.com/in/michaelfragiskatos/"
+          target="_blank"
+        >
           <img
             src="img/iconfinder_linkedin_circle_color_107178.svg"
             alt="LinkedIn"
