--- a/casestudy.html
+++ b/casestudy.html
@@ -162,10 +162,17 @@
                 <img src="img/iconfinder_linkedin_circle_color_107178.svg"
                   alt="LinkedIn" class="social__logo">
               </a>
-              <!-- <a href="https://www.twitter.com/petani4life/" target="_blank">
+              <a href="https://www.twitter.com/mfragiskatos/" target="_blank">
                 <img src="img/iconfinder_twitter_circle_color_107170.svg"
                   alt="Twitter" class="social__logo">
-              </a> -->
+              </a>
+              <a href="https://medium.com/@michaelfragiskatos" target="_blank">
+                <img
+                  src="img/iconfinder_Circled_Medium_svg5_5279113.svg"
+                  alt="Medium"
+                  class="social__logo"
+                />
+              </a>
             </div>
           </footer>
       
