--- a/about.html
+++ b/about.html
@@ -131,5 +131,41 @@
         </tbody>
       </table>
     </section>
+    <footer class="page-footer">
+      <h2>Find me on:</h2>
+      <div class="social-media">
+        <a href="https://github.com/mfraggy25" target="_blank">
+          <img
+            src="img/iconfinder_github_circle_black_107161.svg"
+            alt="Github"
+            class="social__logo"
+          />
+        </a>
+        <a
+          href="https://www.linkedin.com/in/michaelfragiskatos/"
+          target="_blank"
+        >
+          <img
+            src="img/iconfinder_linkedin_circle_color_107178.svg"
+            alt="LinkedIn"
+            class="social__logo"
+          />
+        </a>
+        <a href="https://www.twitter.com/mfragiskatos/" target="_blank">
+          <img
+            src="img/iconfinder_twitter_circle_color_107170.svg"
+            alt="Twitter"
+            class="social__logo"
+          />
+        </a>
+        <a href="https://medium.com/@michaelfragiskatos" target="_blank">
+          <img
+            src="img/iconfinder_Circled_Medium_svg5_5279113.svg"
+            alt="Medium"
+            class="social__logo"
+          />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
