--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
             class="social__logo"
           />
         </a>
+        <a href="https://www.twitter.com/mfragiskatos/" target="_blank">
+          <img
+            src="img/iconfinder_twitter_circle_color_107170.svg"
+            alt="Twitter"
+            class="social__logo"
+          />
+        </a>
+        <a href="https://medium.com/@michaelfragiskatos" target="_blank">
+          <img
+            src="img/iconfinder_Circled_Medium_svg5_5279113.svg"
+            alt="Medium"
+            class="social__logo"
+          />
+        </a>
       </div>
     </footer>
 
