add new project, amend about me

--- a/about.html
+++ b/about.html
@@ -62,8 +62,10 @@
         My name is Michael Fragiskatos and I live in Kitchener, Ontario. I have
         recently begun embarking on a major career change in my life by jumping
         into web development. I dabbled in some coding and it made me realize
-        this is what I want to pursue. I am currently enrolled in the Web
-        Development program through Career Foundry.
+        this is what I want to pursue. I completed the Web Development program
+        through Career Foundry where I created projects using frameworks such as
+        React, Angular, and Vue.js. I have since continued practice these skills
+        through new projects while simultaneously learning new skills.
         <br />
         <br />
         When I'm not coding I enjoy travelling, working out, hot yoga, playing
