--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         alt="Michael Fragiskatos Portrait"
         class="profile__portrait"
       />
-      <h1>Online Portfolio</h1>
+      <h1>Full Stack Developer - Welcome to my portfolio!</h1>
       <p>
         My name is Michael Fragiskatos and I have recently entered the
         challenging yet rewarding world of web development! Feel free to learn
