--- a/work.html
+++ b/work.html
@@ -133,6 +133,21 @@
           </p>
           <a href="https://github.com/mfraggy25/mad-chatter">GitHub Project</a>
         </div>
+        <div class="grid__item">
+          <h2>Employee Management</h2>
+          <img src="img/Employee.PNG" width="350" height="280" />
+          <p>
+            Built an employee management database using the Vue.js framework and
+            the Firebase Firestore cloud platform for data storage.
+          </p>
+          <a href="https://github.com/mfraggy25/EmployeeManagement"
+            >GitHub Project</a
+          >
+          <br />
+          <a href="https://employeemanagement-app.herokuapp.com/"
+            >Hosted Site</a
+          >
+        </div>
       </div>
     </section>
 
