Add Pacman Plus

--- a/work.html
+++ b/work.html
@@ -56,6 +56,14 @@
       <h1>Work</h1>
       <div class="grid">
         <div class="grid__item">
+          <h2>Pacman Plus</h2>
+          <img src="img/Pacman.PNG" width="350" height="275" />
+          <p>
+            Made with Vanilla JavaScript, I built a version of the classic arcade game where the maze is bigger, more complex, and more ghosts to avoid.
+          </p>
+          <a href="https://github.com/mfraggy25/pacman">GitHub Project</a>
+        </div>
+        <div class="grid__item">
           <h2>Pokedex App</h2>
           <img src="img/Pokedex.PNG" width="350" height="275" />
           <p>
@@ -135,7 +143,7 @@
         </div>
         <div class="grid__item">
           <h2>Employee Management</h2>
-          <img src="img/Employee.PNG" width="350" height="280" />
+          <img src="img/Employee.PNG" width="350" height="250" />
           <p>
             Built an employee management database using the Vue.js framework and
             the Firebase Firestore cloud platform for data storage.
