--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
       <div class="grid">
         <div class="grid__item">
           <h2>Pacman Plus</h2>
-          <img src="img/Pacman.PNG" width="350" height="275" />
+          <img src="img/pacman.PNG" width="350" height="275" />
           <p>
             Made with Vanilla JavaScript, I built a version of the classic arcade game where the maze is bigger, more complex, and more ghosts to avoid.
           </p>
