Add Alan AI work

--- a/work.html
+++ b/work.html
@@ -64,6 +64,14 @@
           <a href="https://github.com/mfraggy25/pacman">GitHub Project</a>
         </div>
         <div class="grid__item">
+          <h2>Voice Controlled News Application</h2>
+          <img src="img/Alan.PNG" width="350" height="275" />
+          <p>
+            React news application with built in voice control powered by Alan AI Voice Assistant.  This allows users to ask for news headlines from any news source available from News API
+          </p>
+          <a href="https://github.com/mfraggy25/alan-ai-news">GitHub Project</a>
+        </div>
+        <div class="grid__item">
           <h2>Pokedex App</h2>
           <img src="img/Pokedex.PNG" width="350" height="275" />
           <p>
