Fixed Pacman photo

--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
       <div class="grid">
         <div class="grid__item">
           <h2>Pacman Plus</h2>
-          <img src="img/pacman.PNG" width="350" height="275" />
+          <img src="img/Pacman.PNG" width="350" height="275" />
           <p>
             Made with Vanilla JavaScript, I built a version of the classic arcade game where the maze is bigger, more complex, and more ghosts to avoid.
           </p>
@@ -67,7 +67,7 @@
           <h2>Voice Controlled News Application</h2>
           <img src="img/Alan.PNG" width="350" height="275" />
           <p>
-            React news application with built in voice control powered by Alan AI Voice Assistant.  This allows users to ask for news headlines from any news source available from News API
+            React news application with built in voice control powered by Alan AI Voice Assistant.  This allows users to ask for news headlines from any news source available from News API.
           </p>
           <a href="https://github.com/mfraggy25/alan-ai-news">GitHub Project</a>
         </div>
